changed body background-color to rgb(0,0,0,0.2), changed .grid-card background-color to white for contrast, fixed cursor pointer on .active cards

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  background-color: rgba(0,0,0,0.2);
   height: 96vh;
   display: flex;
   justify-content: center;
@@ -64,6 +65,7 @@ a {
 }
 
 .active {
+  cursor: pointer;
   background-color: #3e8e41;
   color: white;
 }
@@ -79,6 +81,10 @@ a {
   min-width: 420px;
   max-width: 420px;
   display: grid;
+}
+
+.grid-card {
+  background-color: white;
 }
 
 .bordered-grid-card {
